# app/Http/Controllers/GenreController.php
@@ -6,6 +6,7 @@ use App\Genre;
 use App\Http\Requests\DestroyGenre;
 use App\Http\Requests\StoreGenre;
 use Illuminate\Database\QueryException;
+use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 
 class GenreController extends Controller
@@ -89,7 +90,41 @@ class GenreController extends Controller
      */
     public function show($id)
     {
-        return $this->jsonResponse(Genre::find($id));
+        return $this->jsonResponse(Genre::findOrFail($id));
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/genres/search",
+     *     summary="Retrieve specific genres matching the search query",
+     *     operationId="search-genre",
+     *     tags={"Genre"},
+     *     @OA\Parameter(
+     *         name="q",
+     *         in="query",
+     *         description="The query parameter in path",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="All matching genres",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/GenreResponse")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Error: Bad request. When required parameters were not supplied.",
+     *     ),
+     * )
+     */
+    public function search(Request $request)
+    {
+        $q = $request->get('q');
+
+        return $this->jsonResponse(Genre::where('name','like',"%{$q}%")->get());
     }
 
     /**
