# routes/web.php
@@ -31,30 +31,35 @@ $router->group(['prefix' => 'api/employees'], function () use ($router) {
 
 $router->group(['prefix' => 'api'], function () use ($router) {
     $router->get('albums', ['uses' => 'AlbumController@index']);
+    $router->get('albums/search', ['uses' => 'AlbumController@search']);
     $router->get('albums/{id}', ['uses' => 'AlbumController@show']);
     $router->post('albums', ['uses' => 'AlbumController@store']);
     $router->delete('albums/{id}', ['uses' => 'AlbumController@destroy']);
     $router->put('albums/{id}', ['uses' => 'AlbumController@update']);
 
     $router->get('artists', ['uses' => 'ArtistController@index']);
+    $router->get('artists/search', ['uses' => 'ArtistController@search']);
     $router->get('artists/{id}', ['uses' => 'ArtistController@show']);
     $router->post('artists', ['uses' => 'ArtistController@store']);
     $router->delete('artists/{id}', ['uses' => 'ArtistController@destroy']);
     $router->put('artists/{id}', ['uses' => 'ArtistController@update']);
 
     $router->get('customers', ['uses' => 'CustomerController@index']);
+    $router->get('customers/search', ['uses' => 'CustomerController@search']);
     $router->get('customers/{id}', ['uses' => 'CustomerController@show']);
     $router->post('customers', ['uses' => 'CustomerController@store']);
     $router->delete('customers/{id}', ['uses' => 'CustomerController@destroy']);
     $router->put('customers/{id}', ['uses' => 'CustomerController@update']);
 
     $router->get('employees', ['uses' => 'EmployeeController@index']);
+    $router->get('employees/search', ['uses' => 'EmployeeController@search']);
     $router->get('employees/{id}', ['uses' => 'EmployeeController@show']);
     $router->post('employees', ['uses' => 'EmployeeController@store']);
     $router->delete('employees/{id}', ['uses' => 'EmployeeController@destroy']);
     $router->put('employees/{id}', ['uses' => 'EmployeeController@update']);
 
     $router->get('genres', ['uses' => 'GenreController@index']);
+    $router->get('genres/search', ['uses' => 'GenreController@search']);
     $router->get('genres/{id}', ['uses' => 'GenreController@show']);
     $router->post('genres', ['uses' => 'GenreController@store']);
     $router->delete('genres/{id}', ['uses' => 'GenreController@destroy']);
@@ -73,12 +78,14 @@ $router->group(['prefix' => 'api'], function () use ($router) {
     $router->put('invoicelines/{id}', ['uses' => 'InvoicelineController@update']);
 
     $router->get('mediatypes', ['uses' => 'MediatypeController@index']);
+    $router->get('mediatypes/search', ['uses' => 'MediatypeController@search']);
     $router->get('mediatypes/{id}', ['uses' => 'MediatypeController@show']);
     $router->post('mediatypes', ['uses' => 'MediatypeController@store']);
     $router->delete('mediatypes/{id}', ['uses' => 'MediatypeController@destroy']);
     $router->put('mediatypes/{id}', ['uses' => 'MediatypeController@update']);
 
     $router->get('playlists', ['uses' => 'PlaylistController@index']);
+    $router->get('playlists/search', ['uses' => 'PlaylistController@search']);
     $router->get('playlists/{id}', ['uses' => 'PlaylistController@show']);
     $router->post('playlists', ['uses' => 'PlaylistController@store']);
     $router->delete('playlists/{id}', ['uses' => 'PlaylistController@destroy']);
@@ -94,6 +101,7 @@ $router->group(['prefix' => 'api'], function () use ($router) {
     $router->get('reports/customersByCountry', ['uses' => 'ReportController@customersByCountry']);
 
     $router->get('tracks', ['uses' => 'TrackController@index']);
+    $router->get('tracks/search', ['uses' => 'TrackController@search']);
     $router->get('tracks/{id}', ['uses' => 'TrackController@show']);
     $router->post('tracks', ['uses' => 'TrackController@store']);
     $router->delete('tracks/{id}', ['uses' => 'TrackController@destroy']);
